<resources>
    <string name="app_name">RealEstateApp</string>
    <string name="find_your_dream_house_nat_the_best_price">Find Your Dream House\nAt the Best Price</string>
    <string name="we_re_here_for_every_ownership_move_you_face">We\'re here for ownership move you face</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="welcome_back">Welcome back</string>
    <string name="jay_rathod">Jay Rathod</string>
    <string name="searching_for">Searching for...</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="apartment">Plot</string>
    <string name="villa">Villa</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="latest">Latest</string>
    <string name="dummy_data">This 2 bed/1 bath home boasts an enormous, open-living plan, accented by striking architectural features and high-end finishes. Feel inspired by open sight lines that embrace the outdoors, crowned by stunning coffered ceilings.</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="log_out">Log Out</string>
    <string name="buy">Buy</string>
    <string name="info">Info</string>
    <string name="lorem_ipsum_is_a_dummy_text">Lorem ipsum is a dummy text</string>
    <string name="property_name">Property Name</string>
    <string name="textview">TextView</string>
    <string name="settings">Settings</string>
    <string name="popular_properties">Popular Properties</string>
    <string name="search_properties">Search Properties</string>
    <string name="filters">Filters</string>
    <string name="house_with_a_great_view">House with a great view</string>
    <string name="_0000000">$0000000</string>
    <string name="bed">bed</string>
    <string name="bath">bath</string>
    <string name="wi_fi">wi-fi</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="okay">okay</string>
    <string name="congratulations">Congratulations !!</string>
    <string name="fill_the_form">Fill the Form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Trans</string>
    <string name="age">Age</string>
    <string name="no_account">No Account ?</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="signup_agreement">By signing up, you\'re agreeing to our Terms and Conditions and Privacy Policy.</string>
    <string name="email_user_id">Email / User ID</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_otp_code_here">Enter your OTP code Here</string>
    <string name="i_didn_t_receive_a_code">I didn\'t receive a code!</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">Resend code</string>
    <string name="_4_5">4.5</string>
</resources>