<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".fragment.ForgotPasswordFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWelcomeBG"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:paddingBottom="@dimen/dp_20"
        android:scaleType="centerCrop"
        android:src="@drawable/background_signup"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ButtonBackButton"
        style="@style/BackButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_round_corner"
        android:elevation="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_27"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EditTextEmailOrUserId"
            style="@style/all_edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/email_user_id"
            app:layout_constraintTop_toBottomOf="@id/tvLoginText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ButtonSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/background_button"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextEmailOrUserId" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/no_account"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toStartOf="@id/TextViewRegister"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ButtonSendOTP" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TextViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_3"
            android:text="@string/register"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvRegisterLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvRegisterLink"
            app:layout_constraintTop_toTopOf="@id/tvRegisterLink" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>